--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -383,7 +383,7 @@
 
             <div class="field col-2">
               <label htmlFor="datePurchase">Date </label>
-              <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase"></p-calendar>
+              <p-calendar [(ngModel)]="datePurchase" [showTime]="true" [showSeconds]="true" name="datePurchase" id="datePurchase"></p-calendar>
             </div>
 
             <div class="field col-5">
