last update signup

--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -414,7 +414,7 @@
             <div class="col-3">
               <div class="field">
                 <label htmlFor="montant">Montant</label>
-                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="montant" id="montant" [(ngModel)]="montant" [showButtons]="true" [min]="0" ></p-inputNumber>
+                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="montant" id="montant" [(ngModel)]="montant" [showButtons]="true" [min]="0" [readonly]="true" ></p-inputNumber>
               </div>
             </div>
 
