--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -27,8 +27,8 @@
       <table mat-table [dataSource]="dataSource" class="w-100">
         <ng-container matColumnDef="nom produit">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom du produit</th>
-          <td mat-cell *matCellDef="let price">
-            {{ price?.product?.name }}
+          <td mat-cell *matCellDef="let product">
+            {{ product.name }}
           </td>
         </ng-container>
 
@@ -36,8 +36,8 @@
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Catégorie
           </th>
-          <td mat-cell *matCellDef="let price" class="f-s-14">
-            {{ price?.product?.category?.name }}
+          <td mat-cell *matCellDef="let product" class="f-s-14">
+            {{ product.category?.name }}
           </td>
         </ng-container>
 
@@ -46,9 +46,9 @@
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Action
           </th>
-          <td mat-cell *matCellDef="let price" class="action-link">
+          <td mat-cell *matCellDef="let product" class="action-link">
             <a
-            (click)="openDialog(price)"
+            (click)="openDialog(product)"
               class="m-r-10 cursor-pointer"
               ><i-tabler name="eye" class="icon-18"></i-tabler
             ></a>
@@ -73,25 +73,38 @@
 
 <ng-template #dialogTemplate>
   <mat-dialog-content style="max-width: 1200px; padding: 16px;">
-    <div class="dialog-container">
-      <!-- Titre de la boîte de dialogue -->
-      <h2 class="dialog-title">Détails du Prix</h2>
 
-      <!-- Tableau élégant -->
-      <div class="info-table">
-        <!-- En-tête des colonnes -->
-        <div class="info-header">
-          <div class="info-header-cell">Fournisseur</div>
-          <div class="info-header-cell">Prix</div>
+    <!-- Si priceData existe, afficher le tableau -->
+    <div *ngIf="priceData; else noPriceData">
+      <div class="dialog-container">
+        <!-- Titre de la boîte de dialogue -->
+        <h2 class="dialog-title">Détails du Prix</h2>
+
+        <!-- Tableau élégant -->
+        <div class="info-table">
+          <!-- En-tête des colonnes -->
+          <div class="info-header">
+            <div class="info-header-cell">Fournisseur</div>
+            <div class="info-header-cell">Prix</div>
+          </div>
+
+          <!-- Ligne Fournisseur -->
+
+          <div *ngFor="let pric of price" class="info-row">
+            <div class="info-cell label">{{ pric?.shop?.name || 'Non renseigné' }}</div>
+            <div class="info-cell value">
+              {{ pric?.value || 'Non renseigné' }}
+              {{ pric?.currency?.symbol || 'Non renseigné' }}
+            </div>
+          </div>
         </div>
-
-        <!-- Ligne Fournisseur -->
-        <div class="info-row">
-          <div class="info-cell label">{{ priceData?.shop?.name || 'Non renseigné' }}</div>
-          <div class="info-cell value">{{ priceData?.product?.price || 'Non renseigné' }}  {{ priceData?.currency?.symbol || 'Non renseigné' }}</div>
-        </div>
-
       </div>
     </div>
+
+    <!-- Si priceData n'existe pas, afficher un message alternatif -->
+    <ng-template  #noPriceData>
+      <h1 style="text-align: center; margin-top: 80px;">Pas de course pour ce produit</h1>
+    </ng-template>
+
   </mat-dialog-content>
 </ng-template>
