--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -108,7 +108,7 @@
             />
           </mat-form-field>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <mat-form-field appearance="outline" class="w-100">
             <input
               matInput
@@ -118,7 +118,7 @@
               [(ngModel)]="shopData.acronym"
             />
           </mat-form-field>
-        </div>
+        </div> -->
         <div class="col-lg-6">
           <mat-form-field appearance="outline" class="w-100">
             <input
@@ -157,7 +157,7 @@
             />
           </mat-form-field>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-12">
           <mat-form-field appearance="outline" class="w-100">
             <input
               matInput
