--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -84,68 +84,35 @@
 
 
 <!-- add -->
-<ng-template  #dialogTemplate>
-  <mat-dialog-content style="max-width: 1200px; max-height: 400px;">
+<ng-template #dialogTemplate>
+  <mat-dialog-content style="max-width: 1200px; max-height: 450px;">
     <div class="p-16 bg-light-primary rounded" style="margin-bottom: 20px;">
       <h5 class="mat-subtitle-2 text-primary d-flex align-items-center f-w-600">
         <i-tabler name="info-circle" class="icon-20 m-r-8 d-flex"></i-tabler
         >Ajout d'un produit
       </h5>
     </div>
-    <form  #productForm="ngForm">
+    <form #productForm="ngForm">
       <div class="row">
         <div class="col-lg-6">
+          <label for="name">Nom du Produit</label>
           <mat-form-field appearance="outline" class="w-100">
             <input
               matInput
-              placeholder="Nom du Produit"
+              id="name"
+              placeholder="Entrez le nom du produit"
               required
               name="name"
               [(ngModel)]="productData.name"
             />
           </mat-form-field>
         </div>
-        <!-- <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              placeholder="Code du Produit"
-              required
-              name="code"
-              [(ngModel)]="productData.code"
-            />
-          </mat-form-field>
-        </div> -->
-        <!-- <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              type="number"
-              placeholder="Prix"
-              required
-              name="price"
-              [(ngModel)]="productData.price"
-            />
-          </mat-form-field>
-        </div>
+
         <div class="col-lg-6">
+          <label for="unit">Unité</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Devise</mat-label>
             <mat-select
-              [(ngModel)]="productData.currency"
-              name="currency"
-              required
-            >
-              <mat-option *ngFor="let currency of currencys" [value]="currency">
-                {{ currency.name }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div> -->
-        <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Unité</mat-label>
-            <mat-select
+              id="unit"
               [(ngModel)]="productData.unit"
               name="unit"
               required
@@ -157,9 +124,10 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6">
+          <label for="category">Catégorie</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Catégorie</mat-label>
             <mat-select
+              id="category"
               [(ngModel)]="productData.category"
               name="category"
               required
@@ -170,24 +138,12 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <!-- <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Marque</mat-label>
-            <mat-select
-              [(ngModel)]="productData.brand"
-              name="brand"
-              required
-            >
-              <mat-option *ngFor="let brand of brands" [value]="brand">
-                {{ brand.name }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div> -->
+
         <div class="col-lg-6">
+          <label for="conditioning">Conditionnement</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Conditionnement</mat-label>
             <mat-select
+              id="conditioning"
               [(ngModel)]="productData.conditioning"
               name="conditioning"
               required
@@ -199,10 +155,12 @@
           </mat-form-field>
         </div>
         <div class="col-lg-12">
+          <label for="description">Description</label>
           <mat-form-field appearance="outline" class="w-100">
             <textarea
               matInput
-              placeholder="Description"
+              id="description"
+              placeholder="Entrez une description du produit"
               name="description"
               [(ngModel)]="productData.description"
             ></textarea>
@@ -218,10 +176,11 @@
           <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
         </div>
       </div>
-
     </form>
   </mat-dialog-content>
 </ng-template>
+
+
 
 <!-- update -->
 <ng-template #dialogTemplateEdit>
@@ -236,46 +195,25 @@
       <div class="row">
         <!-- Nom du produit -->
         <div class="col-lg-6">
+          <label for="name">Nom du Produit</label>
           <mat-form-field appearance="outline" class="w-100">
             <input
               matInput
-              placeholder="Nom du Produit"
+              id="name"
+              placeholder="Entrez le nom du produit"
               required
               name="name"
               [(ngModel)]="productData.name"
             />
           </mat-form-field>
         </div>
-        <!-- Code du produit -->
-        <!-- <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              placeholder="Code du Produit"
-              required
-              name="code"
-              [(ngModel)]="productData.code"
-            />
-          </mat-form-field>
-        </div> -->
-        <!-- Prix -->
-        <!-- <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              type="number"
-              placeholder="Prix"
-              required
-              name="price"
-              [(ngModel)]="productData.price"
-            />
-          </mat-form-field>
-        </div> -->
+
         <!-- Unité -->
         <div class="col-lg-6">
+          <label for="unit">Unité</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Unité</mat-label>
             <mat-select
+              id="unit"
               [(ngModel)]="productData.unit"
               name="unit"
               required
@@ -286,11 +224,13 @@
             </mat-select>
           </mat-form-field>
         </div>
+
         <!-- Catégorie -->
         <div class="col-lg-6">
+          <label for="category">Catégorie</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Catégorie</mat-label>
             <mat-select
+              id="category"
               [(ngModel)]="productData.category"
               name="category"
               required
@@ -301,26 +241,13 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <!-- Marque -->
-        <!-- <div class="col-lg-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Marque</mat-label>
-            <mat-select
-              [(ngModel)]="productData.brand"
-              name="brand"
-              required
-            >
-              <mat-option *ngFor="let brand of brands" [value]="brand">
-                {{ brand.name }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div> -->
+
         <!-- Conditionnement -->
         <div class="col-lg-6">
+          <label for="conditioning">Conditionnement</label>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Conditionnement</mat-label>
             <mat-select
+              id="conditioning"
               [(ngModel)]="productData.conditioning"
               name="conditioning"
               required
@@ -331,12 +258,15 @@
             </mat-select>
           </mat-form-field>
         </div>
+
         <!-- Description -->
         <div class="col-lg-12">
+          <label for="description">Description</label>
           <mat-form-field appearance="outline" class="w-100">
             <textarea
               matInput
-              placeholder="Description"
+              id="description"
+              placeholder="Entrez une description du produit"
               name="description"
               [(ngModel)]="productData.description"
             ></textarea>
@@ -345,15 +275,13 @@
       </div>
 
       <div class="row">
-
         <div class="col-lg-6">
-          <button mat-flat-button color="primary" class="large-button" (click)="editProduct()"[disabled]="!productForm.valid"> Modifier </button>
+          <button mat-flat-button color="primary" class="large-button" (click)="editProduct()" [disabled]="!productForm.valid"> Modifier </button>
         </div>
         <div class="col-lg-6">
           <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
         </div>
       </div>
-
     </form>
   </mat-dialog-content>
 </ng-template>
